--- a/my-google-books/package.json
+++ b/my-google-books/package.json
@@ -9,10 +9,14 @@
     "axios": "^0.21.1",
     "grommet": "^2.16.2",
     "grommet-icons": "^4.5.0",
+    "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
